--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-router-dom": "^5.2.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
