--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "formik": "^2.2.6",
     "graphql": "^15.5.0",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -24,7 +25,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "react-router-dom": "^5.2.0",
-    "validator": "^13.5.2"
+    "validator": "^13.5.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
